cli/tests/snapshots/arguments__reflink_clone_no_subcommand.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"reflink\"])"
---
Toolbox for reflink operations: lightweight file copies that share data extents instead of copying
bytes
