cli/tests/snapshots/arguments__reflink_clone_with_range.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"reflink\", \"clone\", \"-r\", \"0:4096:8192\", \"/mnt/src.bin\",\n\"/mnt/dst.bin\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Reflink(
        ReflinkCommand {
            subcommand: Clone(
                ReflinkCloneCommand {
                    ranges: [
                        "0:4096:8192",
                    ],
                    source: "/mnt/src.bin",
                    target: "/mnt/dst.bin",
                },
            ),
        },
    ),
}
