cli/tests/snapshots/arguments__replace_cancel.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"replace\", \"cancel\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Replace(
        ReplaceCommand {
            subcommand: Cancel(
                ReplaceCancelCommand {
                    mount_point: "/mnt",
                },
            ),
        },
    ),
}
