cli/tests/snapshots/arguments__replace_start.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"replace\", \"start\", \"/dev/sda\", \"/dev/sdb\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Replace(
        ReplaceCommand {
            subcommand: Start(
                ReplaceStartCommand {
                    source: "/dev/sda",
                    target: "/dev/sdb",
                    mount_point: "/mnt",
                    redundancy_only: false,
                    force: false,
                    no_background: false,
                    enqueue: false,
                    nodiscard: false,
                },
            ),
        },
    ),
}
