cli/tests/snapshots/arguments__scrub_resume.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"scrub\", \"resume\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Scrub(
        ScrubCommand {
            subcommand: Resume(
                ScrubResumeCommand {
                    no_background: false,
                    device: false,
                    readonly: false,
                    raw: false,
                    ioprio_class: None,
                    ioprio_classdata: None,
                    path: "/mnt",
                },
            ),
        },
    ),
}
