cli/tests/snapshots/arguments__scrub_start.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"scrub\", \"start\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Scrub(
        ScrubCommand {
            subcommand: Start(
                ScrubStartCommand {
                    no_background: false,
                    device: false,
                    readonly: false,
                    raw: false,
                    force: false,
                    limit: None,
                    ioprio_class: None,
                    ioprio_classdata: None,
                    path: "/mnt",
                },
            ),
        },
    ),
}
