cli/tests/snapshots/arguments__scrub_status.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"scrub\", \"status\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Scrub(
        ScrubCommand {
            subcommand: Status(
                ScrubStatusCommand {
                    device: false,
                    raw: false,
                    path: "/mnt",
                },
            ),
        },
    ),
}
